INTWEB-150 fix alignment on button

--- a/app/admin/platform/associations/association.less
+++ b/app/admin/platform/associations/association.less
@@ -78,8 +78,7 @@
         }
 
         button {
-            align-self: center;
-            margin-top: -4%;
+            margin-top: 22px;
         }
     }
 
